# skill-manager

./: README.md  README_CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.claude/: settings.local.json
.claude/commands/: add-and-remove-npm-scripts-and-dependencies.md
.codex/: AGENTS.md
.github/workflows/: tauri.yml
.workbuddy/memory/: 2026-03-25.md
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/targets/: windows-manifest.xml
src/pages/dashboard/: Dashboard.vue
src/pages/settings/: Settings.vue
src/pages/skills/: SkillDetail.vue  Skills.vue
src/pages/sync/: Sync.vue
src/pages/tools/: Tools.vue
src/stores/: settingsStore.ts  skillStore.ts  toolStore.ts
src/styles/: main.css
src/types/: index.ts
