[package]
name = "skill-dock"
version = "0.1.0"
description = "Local Skill Management Tool"
authors = []
edition = "2021"

[lib]
name = "skill_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
