[package]
name = "local-skill-manage"
version = "0.1.0"
description = "Local Skill Management Tool"
authors = []
edition = "2021"

# Windows manifest configuration
[[package.metadata.windows.subsystem]]
name = "windows"
requested-execution-level = "requireAdministrator"

[lib]
name = "local_skill_manage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
junction = "1.4.2"
